--- a/ath-p4-proj2/MainWindow.xaml
+++ b/ath-p4-proj2/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ath_p4_proj2.ViewModels"
+        xmlns:localvm="clr-namespace:ath_p4_proj2.ViewModels"
         mc:Ignorable="d"
         Title="Menedżer urządzeń" Height="450" Width="800">
     <Window.DataContext>
-        <local:MainViewModel />
+        <localvm:MainViewModel />
     </Window.DataContext>
 
     <Window.Resources>
@@ -21,21 +21,43 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/> <!-- 0 Header -->
+            <RowDefinition Height="Auto"/> <!-- 1 Użytkownik -->
+            <RowDefinition Height="Auto"/> <!-- 2 Urządzenia label -->
+            <RowDefinition Height="Auto"/> <!-- 3 Urządzenia -->
+            <RowDefinition Height="Auto"/> <!-- 4 Awarie label -->
+            <RowDefinition Height="Auto"/> <!-- 5 Awarie -->
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Style="{StaticResource AppHeader}" Text="Ewidencja sprzetu komputerowego w firmie" Grid.Row="0"/>
-        <Separator VerticalAlignment="Top" Grid.Row="1"/>
-        <TextBlock Style="{StaticResource AppUser}" Text="{Binding UserString, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" />
-        <Separator VerticalAlignment="Bottom" Grid.Row="1"/>
-        <WrapPanel Grid.Row="2">
+
+        <TextBlock Style="{StaticResource AppHeader}" Text="Ewidencja sprzetu komputerowego firmy X" Height="72" Width="458" />
+
+        <Separator VerticalAlignment="Top" Grid.Row="1" Margin="0,2,0,0" Height="1"/>
+        <TextBlock Style="{StaticResource AppUser}" Text="{Binding UserString, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" HorizontalAlignment="Left" Margin="628,0,0,10" Grid.RowSpan="2" Width="172" />
+        <Separator VerticalAlignment="Top" Grid.Row="1" Margin="0,33,0,0" Height="1"/>
+
+        <Label Grid.Row="2" Content="Urządzenia:" />
+
+        <WrapPanel Grid.Row="3">
             <WrapPanel.Resources>
                 <Style TargetType="Button" BasedOn="{StaticResource BaseButton}">
                     <Setter Property="Margin" Value="10" />
                 </Style>
             </WrapPanel.Resources>
-            <Button Content="Moje urządzenia" Command="{Binding OpenWindowCommand}"/>
+            <Button Content="Moje urządzenia" Command="{Binding OpenWindowCommand}" CommandParameter="MyDevices"/>
+            <Button Content="Urządzenia dostępne do wydania" Command="{Binding OpenWindowCommand}" CommandParameter="AvailableDevices"/>
+        </WrapPanel>
+
+        <Label Grid.Row="4" Content="Awarie:" />
+        
+        <WrapPanel Grid.Row="5">
+            <WrapPanel.Resources>
+                <Style TargetType="Button" BasedOn="{StaticResource BaseButton}">
+                    <Setter Property="Margin" Value="10" />
+                </Style>
+            </WrapPanel.Resources>
+            <Button Content="Zgłoś awarie urządzenia" Command="{Binding OpenWindowCommand}" CommandParameter="ReportMalfunction"/>
+            <Button Content="Zgłoszone awarie" Command="{Binding OpenWindowCommand}" CommandParameter="MyReportedDeviceMalfunctions"/>
         </WrapPanel>
     </Grid>
 </Window>
