--- a/ath-p4-proj2/Windows/MyDevicesWindow.xaml
+++ b/ath-p4-proj2/Windows/MyDevicesWindow.xaml
@@ -1,12 +1,11 @@
-﻿<Window x:Class="ath_p4_proj2.Windows.AvailableDevicesWindow"
+﻿<Window x:Class="ath_p4_proj2.Windows.MyDevicesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ath_p4_proj2.Windows"
         xmlns:localvm="clr-namespace:ath_p4_proj2.ViewModels"
         mc:Ignorable="d"
-        Title="Lista dostępnych urządzeń" Height="450" Width="800">
+        Title="Moje urządzenia" Height="450" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,9 +14,9 @@
         </ResourceDictionary>
     </Window.Resources>
     <Window.DataContext>
-        <localvm:AvailableDevicesViewModel />
+        <localvm:MyDevicesViewModel />
     </Window.DataContext>
-    
+
     <Grid>
         <DataGrid ItemsSource="{Binding Devices}">
             <DataGrid.Resources>
