--- a/ath-p4-proj2/Windows/MyReportedDeviceMalfunctions.xaml
+++ b/ath-p4-proj2/Windows/MyReportedDeviceMalfunctions.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ath_p4_proj2.Windows.AvailableDevicesWindow"
+﻿<Window x:Class="ath_p4_proj2.Windows.MyReportedDeviceMalfunctionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ath_p4_proj2.Windows"
         xmlns:localvm="clr-namespace:ath_p4_proj2.ViewModels"
         mc:Ignorable="d"
-        Title="Lista dostępnych urządzeń" Height="450" Width="800">
+        Title="Zgłoszone awarie" Height="450" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -15,11 +15,11 @@
         </ResourceDictionary>
     </Window.Resources>
     <Window.DataContext>
-        <localvm:AvailableDevicesViewModel />
+        <localvm:MyReportedDeviceMalfunctionsViewModel />
     </Window.DataContext>
-    
+
     <Grid>
-        <DataGrid ItemsSource="{Binding Devices}">
+        <DataGrid ItemsSource="{Binding Malfunctions}">
             <DataGrid.Resources>
                 <Style TargetType="DataGridCell">
                     <Setter Property="Padding" Value="20" />
