--- a/ath-p4-proj2/MainWindow.xaml
+++ b/ath-p4-proj2/MainWindow.xaml
@@ -30,13 +30,13 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Style="{StaticResource AppHeader}" Text="Ewidencja sprzetu komputerowego firmy X" Height="72" Width="458" />
+        <TextBlock Style="{StaticResource AppHeader}" Text="Ewidencja sprzetu komputerowego firmy X" />
 
-        <Separator VerticalAlignment="Top" Grid.Row="1" Margin="0,2,0,0" Height="1"/>
-        <TextBlock Style="{StaticResource AppUser}" Text="{Binding UserString, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" HorizontalAlignment="Left" Margin="628,0,0,10" Grid.RowSpan="2" Width="172" />
-        <Separator VerticalAlignment="Top" Grid.Row="1" Margin="0,33,0,0" Height="1"/>
+        <Separator VerticalAlignment="Top" Grid.Row="1" Height="1"/>
+        <TextBlock Style="{StaticResource AppUser}" Text="{Binding UserString, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" HorizontalAlignment="Right" />
+        <Separator VerticalAlignment="Bottom" Grid.Row="1" Height="1"/>
 
-        <Label Grid.Row="2" Content="Urządzenia:" />
+        <Label Style="{StaticResource MenuLabel}" Grid.Row="2" Content="Urządzenia:" />
 
         <WrapPanel Grid.Row="3">
             <WrapPanel.Resources>
@@ -44,11 +44,11 @@
                     <Setter Property="Margin" Value="10" />
                 </Style>
             </WrapPanel.Resources>
-            <Button Content="Moje urządzenia" Command="{Binding OpenWindowCommand}" CommandParameter="MyDevices"/>
+            <Button Content="Twoje urządzenia" Command="{Binding OpenWindowCommand}" CommandParameter="MyDevices"/>
             <Button Content="Urządzenia dostępne do wydania" Command="{Binding OpenWindowCommand}" CommandParameter="AvailableDevices"/>
         </WrapPanel>
 
-        <Label Grid.Row="4" Content="Awarie:" />
+        <Label Style="{StaticResource MenuLabel}" Grid.Row="4" Content="Awarie:" />
         
         <WrapPanel Grid.Row="5">
             <WrapPanel.Resources>
@@ -57,7 +57,7 @@
                 </Style>
             </WrapPanel.Resources>
             <Button Content="Zgłoś awarie urządzenia" Command="{Binding OpenWindowCommand}" CommandParameter="ReportMalfunction"/>
-            <Button Content="Zgłoszone awarie" Command="{Binding OpenWindowCommand}" CommandParameter="MyReportedDeviceMalfunctions"/>
+            <Button Content="Zgłoszone awarie urządzeń" Command="{Binding OpenWindowCommand}" CommandParameter="MyReportedDeviceMalfunctions"/>
         </WrapPanel>
     </Grid>
 </Window>
