--- a/ath-p4-proj2/Windows/MyDevicesWindow.xaml
+++ b/ath-p4-proj2/Windows/MyDevicesWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:localvm="clr-namespace:ath_p4_proj2.ViewModels"
         mc:Ignorable="d"
-        Title="Moje urządzenia" Height="450" Width="800">
+        Title="Twoje urządzenia" Height="450" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -18,13 +18,11 @@
     </Window.DataContext>
 
     <Grid>
-        <DataGrid ItemsSource="{Binding Devices}">
-            <DataGrid.Resources>
-                <Style TargetType="DataGridCell">
-                    <Setter Property="Padding" Value="20" />
-                </Style>
-            </DataGrid.Resources>
-        </DataGrid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Style="{StaticResource AppHeader}" Text="Twoje urządzenia" Grid.Row="0" />
+        <DataGrid ItemsSource="{Binding Devices}" Grid.Row="1" />
     </Grid>
 </Window>
